--- a/Part2_CMVvsUnpopO_DataCleaning.ipynb
+++ b/Part2_CMVvsUnpopO_DataCleaning.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "87b85d44",
+   "execution_count": 1,
+   "id": "edb9ac03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import requests"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52993da3",
+   "id": "61ea3ea9",
    "metadata": {},
    "source": [
     "- Import data."
@@ -22,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df2f1cf4",
+   "id": "29128d76",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +42,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0082f38",
+   "id": "65c49e7a",
+   "metadata": {},
+   "source": [
+    "***Data Cleaning***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a15c6e9",
    "metadata": {},
    "source": [
     "- Combine frames for cleaning."
@@ -51,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "52e36ae9",
+   "execution_count": 3,
+   "id": "9a905663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2e896e",
+   "id": "30513460",
    "metadata": {},
    "source": [
     "- Filter out fully null columns and posts that are likely made with moderation in mind."
@@ -69,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "68116c17",
+   "execution_count": 4,
+   "id": "a3e84de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "e7e053d5",
+   "execution_count": 5,
+   "id": "46877d2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e31291",
+   "id": "0135afba",
    "metadata": {},
    "source": [
     "- Reduce dataframe to a selection of columns."
@@ -99,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "ce1c1a2e",
+   "execution_count": 6,
+   "id": "ab3b0d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "846b3a92",
+   "execution_count": 7,
+   "id": "a6ea0eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb77dd8",
+   "id": "add39475",
    "metadata": {},
    "source": [
     "- Remove posts that are not self-posted text posts."
@@ -127,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "32d55b97",
+   "execution_count": 8,
+   "id": "1df907e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,29 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "dd4052df",
+   "execution_count": 9,
+   "id": "eb40ff36",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Avanyali\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:4315: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  errors=errors,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.drop(columns = 'is_self', inplace = True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba292aea",
+   "id": "464f5b85",
    "metadata": {},
    "source": [
     "- Remove posts without body text. Confirm it does not imbalance our classes."
@@ -167,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "6dfa3583",
+   "execution_count": 10,
+   "id": "8740ed14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "02f82be2",
+   "execution_count": 11,
+   "id": "feb00e3f",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +184,7 @@
        "Name: subreddit, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6140dcab",
+   "id": "5af45e9e",
    "metadata": {},
    "source": [
     "- Check nulls."
@@ -208,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "588672e3",
+   "execution_count": 12,
+   "id": "1b6e80c6",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +221,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,8 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "0b867b67",
+   "execution_count": 13,
+   "id": "8f74c54b",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +242,7 @@
        "3445"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,8 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c24309d6",
+   "execution_count": 14,
+   "id": "bf2775d9",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +263,7 @@
        "(3445,)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fca7de",
+   "id": "5e4792f9",
    "metadata": {},
    "source": [
     "- Author fullname was hoped to be usable when author was '[deleted]'. It is not, and will be dropped."
@@ -287,38 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "99307464",
+   "execution_count": 15,
+   "id": "d811760c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Avanyali\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:4315: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  errors=errors,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.drop(columns = 'author_fullname', inplace = True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e474fe3e",
+   "id": "857c340b",
    "metadata": {},
    "source": [
-    "- Drop all posts with '[deleted]' as text data, check if class imbalance is created."
+    "- Drop all posts with '[deleted]' or '[removed]' as text data, check if class imbalance is created."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "4b2baafb",
+   "execution_count": 16,
+   "id": "fc9c8297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,19 +310,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "c4a92c44",
+   "execution_count": 17,
+   "id": "b1d4569f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['selftext'] != '[removed]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2f3f3895",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "unpopularopinion    0.500147\n",
-       "changemyview        0.499853\n",
+       "unpopularopinion    0.521837\n",
+       "changemyview        0.478163\n",
        "Name: subreddit, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,12 +342,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79590085",
+   "metadata": {},
+   "source": [
+    "- Remove automoderator posts and moderator posts.\n",
+    "- Moderator names from:\n",
+    "   - https://www.reddit.com/r/unpopularopinion/about/moderators\n",
+    "   - https://www.reddit.com/r/changemyview/about/moderators"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39e5a1fd",
+   "execution_count": 19,
+   "id": "bf69e1d1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df[df['author'] != 'AutoModerator']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ef5f962f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unpop_mods = ['Young_Zaphod','TheUniquestUsername','Kinrove','conalfisher','RandomName01','dantheman280','AutoModerator','UnpopularOpinionMods','MisfitPotatoReborn','Umbresp','Blank-Cheque','siouxsie_siouxv2','Iangator','sibre2001','justcool393','ignorantConservative','BotTerminator','SendWhiskey','anticapitalist','Flair_Helper','Wismuth_Salix','Blubatt','theimperious1','BlatantConservative','nexerxe','dramasutra2020','Cambino_02']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5bfe6bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmv_mods = ['Ansuz07','cwenham','Nepene','hacksoncode','huadpe','FlyingFoxOfTheYard_','thedylanackerman','Huntingmoa','Jaysank','tbdabbholm','Armadeo','Poo-et','themaskedserpent','Helpfulcloning','Guanfranco','ViewedFromTheOutside','ZeroPointZero_','entpmisanthrope','TheRegen','ihatedogs2','DeleteriousEuphuism','SquibblesMcGoo','Znyper','hallidev','qtx','DeltaBot','AutoModerator','herrsatan','LetMeNotHear','redditor427']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f9714fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['author'].map(lambda x: True if x not in unpop_mods else False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e54741f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['author'].map(lambda x: True if x not in cmv_mods else False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "28adec89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unpopularopinion    0.51815\n",
+       "changemyview        0.48185\n",
+       "Name: subreddit, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['subreddit'].value_counts(normalize = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26aecec6",
+   "metadata": {},
+   "source": [
+    "- Drop duplicate rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a4489c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0cc6d0d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unpopularopinion    0.563229\n",
+       "changemyview        0.436771\n",
+       "Name: subreddit, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['subreddit'].value_counts(normalize = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cce262ef",
+   "metadata": {},
+   "source": [
+    "- Save cleaned file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5adc0ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/cleaned_cmv&unpop_data')"
+   ]
   }
  ],
  "metadata": {
