--- a/Part1_CMVvsUnpopO_WebScraping.ipynb
+++ b/Part1_CMVvsUnpopO_WebScraping.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "800aca81",
+   "id": "a7e36be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1fec59b",
+   "id": "a753d13f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b87966",
+   "id": "da1ac176",
    "metadata": {},
    "source": [
     "***Process used for data collection***"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60b5ec19",
+   "id": "d774d76c",
    "metadata": {},
    "source": [
     "- Never run this again, unless trying to duplicate this work. Full list of queries and the date at which they were made can be found in AllQueries.txt, accompanying this file."
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a4877f1b",
+   "id": "f8d636ee",
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "8ef0b31e",
+   "id": "acad285f",
    "metadata": {},
    "source": [
     "change_frame = pd.concat(posts['changemyview'])\n",
@@ -99,8 +99,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bdf54b58",
+   "metadata": {},
+   "source": [
+    "- Save scraped data."
+   ]
+  },
+  {
    "cell_type": "raw",
-   "id": "ca86001b",
+   "id": "f266f82d",
    "metadata": {},
    "source": [
     "change_frame.to_csv('data/raw_changemyview_initial_scrape')"
@@ -108,10 +116,18 @@
   },
   {
    "cell_type": "raw",
-   "id": "19ca5989",
+   "id": "845c7ff1",
    "metadata": {},
    "source": [
     "opinion_frame.to_csv('data/raw_unpopularopinion_initial_scrape')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d78bfc7f",
+   "metadata": {},
+   "source": [
+    "- On to part 2 ->"
    ]
   }
  ],
