--- a/Part2_CMVvsUnpopO_DataCleaning.ipynb
+++ b/Part2_CMVvsUnpopO_DataCleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "edb9ac03",
+   "id": "95e3d262",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61ea3ea9",
+   "id": "d12f2d25",
    "metadata": {},
    "source": [
     "- Import data."
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "29128d76",
+   "id": "6d1f0382",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c49e7a",
+   "id": "4ca95df9",
    "metadata": {},
    "source": [
     "***Data Cleaning***"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a15c6e9",
+   "id": "b487ab11",
    "metadata": {},
    "source": [
     "- Combine frames for cleaning."
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a905663",
+   "id": "a29ab5bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30513460",
+   "id": "0086786a",
    "metadata": {},
    "source": [
     "- Filter out fully null columns and posts that are likely made with moderation in mind."
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a3e84de4",
+   "id": "d770f0a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "46877d2d",
+   "id": "2e7868ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0135afba",
+   "id": "1a7e2447",
    "metadata": {},
    "source": [
     "- Reduce dataframe to a selection of columns."
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ab3b0d2f",
+   "id": "37416f6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a6ea0eca",
+   "id": "a6051168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add39475",
+   "id": "45fc0586",
    "metadata": {},
    "source": [
     "- Remove posts that are not self-posted text posts."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1df907e8",
+   "id": "e9fd73ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "eb40ff36",
+   "id": "ee2805bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464f5b85",
+   "id": "9f3a17fb",
    "metadata": {},
    "source": [
     "- Remove posts without body text. Confirm it does not imbalance our classes."
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8740ed14",
+   "id": "0eeaf34a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "feb00e3f",
+   "id": "398e953f",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af45e9e",
+   "id": "8b97b51e",
    "metadata": {},
    "source": [
     "- Check nulls."
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1b6e80c6",
+   "id": "b12af911",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8f74c54b",
+   "id": "41207e4d",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bf2775d9",
+   "id": "f0eee4b7",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e4792f9",
+   "id": "d8296af4",
    "metadata": {},
    "source": [
     "- Author fullname was hoped to be usable when author was '[deleted]'. It is not, and will be dropped."
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d811760c",
+   "id": "d85faaa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "857c340b",
+   "id": "edd351c6",
    "metadata": {},
    "source": [
     "- Drop all posts with '[deleted]' or '[removed]' as text data, check if class imbalance is created."
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fc9c8297",
+   "id": "4d3bb299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b1d4569f",
+   "id": "492637ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2f3f3895",
+   "id": "975e4523",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79590085",
+   "id": "d028dd60",
    "metadata": {},
    "source": [
     "- Remove automoderator posts and moderator posts.\n",
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bf69e1d1",
+   "id": "92a23e2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ef5f962f",
+   "id": "ae9a58a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5bfe6bb3",
+   "id": "51ebfc83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f9714fe0",
+   "id": "5dab9ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e54741f5",
+   "id": "4efc4ca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "28adec89",
+   "id": "0956e146",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26aecec6",
+   "id": "b3cb609a",
    "metadata": {},
    "source": [
     "- Drop duplicate rows."
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a4489c30",
+   "id": "3881cf84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "0cc6d0d2",
+   "id": "07de2da8",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cce262ef",
+   "id": "e635ffb4",
    "metadata": {},
    "source": [
     "- Save cleaned file."
@@ -477,11 +477,19 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5adc0ee7",
+   "id": "e59dc486",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('data/cleaned_cmv&unpop_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54f3db69",
+   "metadata": {},
+   "source": [
+    "- On to part 3 ->"
    ]
   }
  ],
