--- a/Part3_CMVvsUnpopO_DataEngineering.ipynb
+++ b/Part3_CMVvsUnpopO_DataEngineering.ipynb
@@ -3,19 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8e5ccb6f",
+   "id": "96f00b4d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
+    "import re\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import confusion_matrix, plot_confusion_matrix\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
     "\n",
     "from skopt.space import Integer, Real, Categorical\n",
     "from skopt import BayesSearchCV\n",
@@ -25,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d658462",
+   "id": "814d7d2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b6d19500",
+   "id": "98357ccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "430b9f7e",
+   "id": "1778fe2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38880761",
+   "id": "799b2521",
    "metadata": {},
    "source": [
     "***Data Engineering***"
@@ -75,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8f693c1d",
+   "id": "bfc1acb1",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a76c25",
+   "id": "e4e5f736",
    "metadata": {},
    "source": [
     "- Set changemyview to be the positive class."
@@ -106,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05967a71",
+   "id": "1d025fc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +119,89 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce56f27",
+   "id": "69ae9516",
+   "metadata": {},
+   "source": [
+    "- Scrub URLs and CMVs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c293e3f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrub_text(string):\n",
+    "    remove_cmv_url = r'^([Cc]{1}[Mm]{1}[Vv]{1}[:]{0,1})|([Ww]{3}[^\\s]+)|([^\\s]+[\\.]{1}[Cc]{1}[Oo]{1}[Mm]{1})$'\n",
+    "    return re.sub(remove_cmv_url, '', string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a0f59a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['title'] = df['title'].map(scrub_text)\n",
+    "df['selftext'] = df['selftext'].map(scrub_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d0ba97c",
+   "metadata": {},
+   "source": [
+    "- Lemmatize text fields."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "de1ff0ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "65ca237c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = RegexpTokenizer('\\w+')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cbf25c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemma_map(in_string):  \n",
+    "    to_lemma = tokenizer.tokenize(in_string)\n",
+    "    return \" \".join([lemmatizer.lemmatize(token.lower()) for token in to_lemma])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d16bebb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['title'] = df['title'].map(lemma_map)\n",
+    "df['selftext'] = df['selftext'].map(lemma_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "083aaffd",
    "metadata": {},
    "source": [
     "- Add sentiment analysis columns."
@@ -123,18 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "76fdb241",
+   "execution_count": 13,
+   "id": "07b06d6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = list(df['selftext'])"
+    "corpus = zip(list(df['title']), list(df['selftext']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e0bb0702",
+   "execution_count": 14,
+   "id": "bd7316de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,15 +229,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5f5adf40",
+   "execution_count": 15,
+   "id": "8ea3beac",
    "metadata": {},
    "outputs": [],
    "source": [
     "sentiment = []    \n",
     "\n",
-    "for tweet in corpus:\n",
-    "    scores = sia.polarity_scores(tweet)\n",
+    "for title, tweet in corpus:\n",
+    "    scores = sia.polarity_scores(title + \" \" + tweet)\n",
     "    sentiment.append(scores)\n",
     "\n",
     "sents = pd.DataFrame(sentiment)"
@@ -159,8 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "23d932a3",
+   "execution_count": 16,
+   "id": "a3d6f8fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d5f72e",
+   "id": "dc0dfe85",
    "metadata": {},
    "source": [
     "- Change column names so that there won't be a collision with vectorized columns."
@@ -177,8 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a6e3e64a",
+   "execution_count": 17,
+   "id": "b892d785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf41a50",
+   "id": "d03f7945",
    "metadata": {},
    "source": [
     "- Add training column for fitting purposes."
@@ -195,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f9d02092",
+   "execution_count": 18,
+   "id": "495b1b68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "9a5c1646",
+   "execution_count": 19,
+   "id": "10cfffb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "342b044e",
+   "execution_count": 20,
+   "id": "922e59a7",
    "metadata": {},
    "outputs": [
     {
@@ -243,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0a04518e",
+   "execution_count": 21,
+   "id": "6977c822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2ba23f",
+   "id": "e43501fc",
    "metadata": {},
    "source": [
     "- Identify best parameters for vectorizer. Code credit to lesson 'advanced hyperparameter search'"
@@ -262,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ae1ed1d4",
+   "execution_count": 23,
+   "id": "436d3811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +359,9 @@
     "])\n",
     "\n",
     "params = {\n",
-    "    'cvec__max_features': Integer(5000, 10000),\n",
+    "    'cvec__max_features': Integer(100, 3000),\n",
     "    'cvec__min_df': Integer(1, 5),\n",
-    "    'cvec__max_df': Real(.75,1, prior='uniform')\n",
-    "    #'cvec__ngram_range': [(1,1), (1,2)]\n",
+    "    'cvec__max_df': Real(.5,1, prior='uniform')\n",
     "}\n",
     "\n",
     "cvec_bs = BayesSearchCV(estimator = pipe,\n",
@@ -284,13 +369,25 @@
     "                     scoring = 'f1_weighted',\n",
     "                     n_iter = 50,\n",
     "                     cv = 5,\n",
+    "                     refit = True,\n",
     "                     random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "277a3ad4",
+   "execution_count": 24,
+   "id": "b7590526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_text_post = X_train['post_title'] + \" \" + X_train['post_text']\n",
+    "test_text_post = X_test['post_title'] + \" \" + X_test['post_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "85d60304",
    "metadata": {},
    "outputs": [
     {
@@ -301,58 +398,57 @@
        "                                         CountVectorizer(stop_words='english')),\n",
        "                                        ('mnb', MultinomialNB())]),\n",
        "              random_state=42, scoring='f1_weighted',\n",
-       "              search_spaces={'cvec__max_df': Real(low=0.75, high=1, prior='uniform', transform='identity'),\n",
-       "                             'cvec__max_features': Integer(low=5000, high=10000, prior='uniform', transform='identity'),\n",
+       "              search_spaces={'cvec__max_df': Real(low=0.5, high=1, prior='uniform', transform='identity'),\n",
+       "                             'cvec__max_features': Integer(low=100, high=3000, prior='uniform', transform='identity'),\n",
        "                             'cvec__min_df': Integer(low=1, high=5, prior='uniform', transform='identity')})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cvec_bs.fit(X_train['post_text'], y_train)"
+    "cvec_bs.fit(train_text_post, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "0997b30c",
+   "execution_count": 26,
+   "id": "b01be723",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds = cvec_bs.predict(X_test['post_text'])"
+    "preds = cvec_bs.predict(test_text_post)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "0c6134b5",
+   "execution_count": 27,
+   "id": "ac8e261d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('cvec',\n",
-       "                 CountVectorizer(max_df=0.7591845371145763, max_features=9916,\n",
-       "                                 min_df=2, stop_words='english')),\n",
-       "                ('mnb', MultinomialNB())])"
+       "OrderedDict([('cvec__max_df', 0.7933144337167336),\n",
+       "             ('cvec__max_features', 1537),\n",
+       "             ('cvec__min_df', 1)])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cvec_bs.best_estimator_"
+    "cvec_bs.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3420afb0",
+   "execution_count": 28,
+   "id": "8b8c1109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,20 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6d2f748d",
+   "execution_count": 29,
+   "id": "b23b3ded",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.7783115991763898,\n",
-       " 'sensitivity': 0.6802827965435978,\n",
-       " 'specificity': 0.8543570993296771,\n",
-       " 'f1': 0.7283431455004206}"
+       "{'accuracy': 0.7899794097460535,\n",
+       " 'sensitivity': 0.7242733699921445,\n",
+       " 'specificity': 0.8409506398537477,\n",
+       " 'f1': 0.750814332247557}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45185e76",
+   "id": "8908a803",
    "metadata": {},
    "source": [
     "- Vectorize words and add to dataframe."
@@ -393,8 +489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "40fde493",
+   "execution_count": 30,
+   "id": "219a761b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,19 +499,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7a10e680",
+   "execution_count": 31,
+   "id": "dcf09e88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xcv_train = cvec.fit_transform(train_total['post_text'])\n",
-    "Xcv_test = cvec.transform(test_total['post_text'])"
+    "Xcv_train = cvec.fit_transform(train_total['post_title'] + \" \" + train_total['post_text'])\n",
+    "Xcv_test = cvec.transform(test_total['post_title'] + \" \" + test_total['post_text'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "4da02728",
+   "execution_count": 32,
+   "id": "11faf954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "aea59518",
+   "execution_count": 33,
+   "id": "9f380ef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,8 +534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "48d1dc1d",
+   "execution_count": 34,
+   "id": "93f2d799",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "50349c9a",
+   "execution_count": 35,
+   "id": "c30b5e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,8 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "5473718b",
+   "execution_count": 36,
+   "id": "c3bddbc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "3c436c65",
+   "execution_count": 37,
+   "id": "756ba18e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedf20e3",
+   "id": "42d66978",
    "metadata": {},
    "source": [
     "- Save engineered file."
@@ -487,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "1d7bdf4c",
+   "execution_count": 38,
+   "id": "852bb370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c785d2",
+   "id": "1b57308c",
    "metadata": {},
    "source": [
     "- On to part 4 ->"
