--- a/Part5_CMVvsUnpopO_Modeling.ipynb
+++ b/Part5_CMVvsUnpopO_Modeling.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "7a8bca09",
+   "execution_count": 1,
+   "id": "bb59ab24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "880d1b26",
+   "id": "6d193b85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a4c3546f",
+   "id": "ac986131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5634f9aa",
+   "id": "3fd948b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b784a938",
+   "id": "4cc2b66b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71729011",
+   "id": "d28a5a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "216e9425",
+   "id": "37742c0f",
    "metadata": {},
    "source": [
     "- Dummy"
@@ -108,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "b2070ceb",
+   "execution_count": 7,
+   "id": "7eb6ee77",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "Name: post_subreddit, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c9bf2f",
+   "id": "f1df0e3f",
    "metadata": {},
    "source": [
     "- XGBoost"
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ac6f328",
+   "execution_count": 8,
+   "id": "7cf1c6c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a5eb8371",
+   "id": "e08ee7e3",
    "metadata": {},
    "source": [
     "xgb_bs.fit(X_train, y_train)"
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "eaae4e3a",
+   "id": "db316ea9",
    "metadata": {},
    "source": [
     "xgb_bs.best_params_"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "b68960f9",
+   "id": "b9104b0e",
    "metadata": {},
    "source": [
     "xgb_preds = xgb_bs.predict(X_test)"
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "913aea4c",
+   "id": "b56db92b",
    "metadata": {},
    "source": [
     "xgb_tn, xgb_fp, xgb_fn, xgb_tp = confusion_matrix(y_test, xgb_preds).ravel()"
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "8c79d634",
+   "id": "087d4fe3",
    "metadata": {
     "tags": []
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "0f478a0a",
+   "id": "09ded216",
    "metadata": {},
    "source": [
     "xgb = xgb_bs.best_estimator_['xgb']"
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "cf2f3817",
+   "id": "9d78135d",
    "metadata": {},
    "source": [
     "pickle.dump(xgb, open('models/XGBoost.sav', 'wb'))"
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9391b23d",
+   "id": "e5670510",
    "metadata": {},
    "source": [
     "- Bagger"
@@ -234,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "4493cde9",
+   "execution_count": null,
+   "id": "bd20f291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,9 +251,11 @@
     "\n",
     "bc_bs = BayesSearchCV(estimator = bc_pipe,\n",
     "                     search_spaces = bc_params,\n",
+    "                     n_jobs = 8,\n",
     "                     scoring = 'f1_weighted',\n",
     "                     n_iter = 50,\n",
     "                     cv = 5,\n",
+    "                     verbose = 1,\n",
     "                     refit = True,\n",
     "                     optimizer_kwargs = {'base_estimator': 'RF'},\n",
     "                     random_state=42)"
@@ -262,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bbba827",
+   "id": "17a642d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,36 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "d55f8f8d",
+   "execution_count": null,
+   "id": "4c7e0619",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([('dtree__ccp_alpha', 0.0032264260031510178),\n",
-       "             ('dtree__criterion', 'entropy'),\n",
-       "             ('dtree__max_depth', 33),\n",
-       "             ('dtree__max_features', 'auto'),\n",
-       "             ('dtree__min_impurity_decrease', 0.003985865308459347),\n",
-       "             ('dtree__min_samples_leaf', 0.01257641629953549),\n",
-       "             ('dtree__min_samples_split', 0.47069904669835266),\n",
-       "             ('dtree__splitter', 'best')])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bc_bs.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "59690bad",
+   "execution_count": null,
+   "id": "2a698f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "219dc66d",
+   "execution_count": null,
+   "id": "a9ee4f7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,26 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "0cc17c43",
+   "execution_count": null,
+   "id": "a39472dc",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'accuracy': 0.7475961538461539,\n",
-       " 'sensitivity': 0.5636792452830188,\n",
-       " 'specificity': 0.8902439024390244,\n",
-       " 'f1': 0.661134163208852}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "metrics(bc_tn, bc_fp, bc_fn, bc_tp, metric = 'all')"
    ]
@@ -346,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc48ccc5",
+   "id": "bbbfc4f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a300a354",
+   "id": "53e6d13f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d533fbdc",
+   "id": "1117bc05",
    "metadata": {},
    "source": [
     "- Logistic Regression"
@@ -373,8 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "bec8540a",
+   "execution_count": null,
+   "id": "702facfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +373,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "66359193",
+   "id": "6abd8dae",
    "metadata": {},
    "source": [
     "logreg_bs.fit(X_train, y_train)"
@@ -411,7 +381,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "7b999df2",
+   "id": "277680e3",
    "metadata": {},
    "source": [
     "logreg_bs.best_params_"
@@ -419,7 +389,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "201bf65f",
+   "id": "454c5da5",
    "metadata": {},
    "source": [
     "logreg_preds = logreg_bs.predict(X_test)"
@@ -427,7 +397,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e16cbc5b",
+   "id": "ef0a3e29",
    "metadata": {},
    "source": [
     "logreg_tn, logreg_fp, logreg_fn, logreg_tp = confusion_matrix(y_test, logreg_preds).ravel()"
@@ -435,7 +405,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "09752320",
+   "id": "fad492ef",
    "metadata": {
     "tags": []
    },
@@ -445,7 +415,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "ea24b7c0",
+   "id": "7fe6e2c8",
    "metadata": {},
    "source": [
     "logreg = logreg_bs.best_estimator_['logreg']"
@@ -453,7 +423,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "75fdee03",
+   "id": "25b76a7f",
    "metadata": {},
    "source": [
     "pickle.dump(logreg, open('models/LogisticRegression.sav', 'wb'))"
@@ -461,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4926b3",
+   "id": "212a72f9",
    "metadata": {},
    "source": [
     "- Decision Tree"
@@ -469,8 +439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "ac99247e",
+   "execution_count": null,
+   "id": "49c33b5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +471,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "788c10ba",
+   "id": "fba38d1e",
    "metadata": {},
    "source": [
     "dtree_bs.fit(X_train, y_train)"
@@ -509,7 +479,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "d734d7a6",
+   "id": "57bfd9ce",
    "metadata": {},
    "source": [
     "dtree_bs.best_params_"
@@ -517,7 +487,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "b07862ac",
+   "id": "d300d950",
    "metadata": {},
    "source": [
     "dtree_preds = dtree_bs.predict(X_test)"
@@ -525,7 +495,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "ddebefe6",
+   "id": "dcb04cc3",
    "metadata": {},
    "source": [
     "dtree_tn, dtree_fp, dtree_fn, dtree_tp = confusion_matrix(y_test, dtree_preds).ravel()"
@@ -533,7 +503,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "74767248",
+   "id": "fd7bb0d0",
    "metadata": {
     "tags": []
    },
@@ -543,7 +513,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "696d6428",
+   "id": "6dcf10ab",
    "metadata": {},
    "source": [
     "dtree = dtree_bs.best_estimator_['dtree']"
@@ -551,7 +521,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "03d0b00b",
+   "id": "90fe72e9",
    "metadata": {},
    "source": [
     "pickle.dump(dtree, open('models/DecisionTree.sav', 'wb'))"
@@ -559,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40fe2af2",
+   "id": "6c5b7f66",
    "metadata": {},
    "source": [
     "- Random Forest"
@@ -567,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "81001df9",
+   "execution_count": null,
+   "id": "3654c3a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +570,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "177b8d06",
+   "id": "04213dac",
    "metadata": {},
    "source": [
     "rf_bs.fit(X_train, y_train)"
@@ -608,7 +578,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "749776a4",
+   "id": "6e4307e7",
    "metadata": {},
    "source": [
     "rf_bs.best_params_"
@@ -616,7 +586,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "7bb02c73",
+   "id": "83eb7353",
    "metadata": {},
    "source": [
     "rf_preds = rf_bs.predict(X_test)"
@@ -624,7 +594,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "5be4bb28",
+   "id": "fc13575c",
    "metadata": {},
    "source": [
     "rf_tn, rf_fp, rf_fn, rf_tp = confusion_matrix(y_test, rf_preds).ravel()"
@@ -632,7 +602,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "4de2ff53",
+   "id": "996ace28",
    "metadata": {},
    "source": [
     "rf_tn, rf_fp, rf_fn, rf_tp"
@@ -640,7 +610,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "40d33b58",
+   "id": "7d2bb886",
    "metadata": {},
    "source": [
     "metrics(rf_tn, rf_fp, rf_fn, rf_tp, metric = 'all')"
@@ -648,7 +618,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "36a8150b",
+   "id": "7d1393e5",
    "metadata": {},
    "source": [
     "rf = rf_bs.best_estimator_['rf']"
@@ -656,7 +626,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "ffdb158c",
+   "id": "ea8fa5df",
    "metadata": {},
    "source": [
     "pickle.dump(rf, open('models/RandomForest.sav', 'wb'))"
@@ -664,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46723216",
+   "id": "221914fc",
    "metadata": {},
    "source": [
     "- Extra Trees"
@@ -672,8 +642,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "7eed89bc",
+   "execution_count": null,
+   "id": "bc9fc4c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +675,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "24e6dd90",
+   "id": "8120230a",
    "metadata": {},
    "source": [
     "et_bs.fit(X_train, y_train)"
@@ -713,7 +683,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "cc22b43d",
+   "id": "d0529501",
    "metadata": {},
    "source": [
     "et_bs.best_params_"
@@ -721,7 +691,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "36b998a2",
+   "id": "233be018",
    "metadata": {},
    "source": [
     "et_preds = et_bs.predict(X_test)"
@@ -729,7 +699,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "8dac17cf",
+   "id": "930e0227",
    "metadata": {},
    "source": [
     "et_tn, et_fp, et_fn, et_tp = confusion_matrix(y_test, et_preds).ravel()"
@@ -737,7 +707,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "8cea17ea",
+   "id": "902faadb",
    "metadata": {},
    "source": [
     "et_tn, et_fp, et_fn, et_tp"
@@ -745,7 +715,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "b0d15d24",
+   "id": "bb68739d",
    "metadata": {},
    "source": [
     "metrics(et_tn, et_fp, et_fn, et_tp, metric = 'all')"
@@ -753,7 +723,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "ab0dbc2f",
+   "id": "0604d7ef",
    "metadata": {},
    "source": [
     "et = et_bs.best_estimator_['et']"
@@ -761,7 +731,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "74e1839d",
+   "id": "03e930fe",
    "metadata": {},
    "source": [
     "pickle.dump(et, open('models/ExtraTrees.sav', 'wb'))"
@@ -769,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f3a8df8",
+   "id": "514fd6c8",
    "metadata": {},
    "source": [
     "- Compare?"
@@ -778,10 +748,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f846ee14",
+   "id": "83d23355",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "roc_auc_score"
+   ]
   }
  ],
  "metadata": {
