--- a/Part3_CMVvsUnpopO_DataEngineering.ipynb
+++ b/Part3_CMVvsUnpopO_DataEngineering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4ca9b1c3",
+   "id": "e18b686d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a45cacad",
+   "id": "187b6052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57911910",
+   "id": "10d5d3e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "52fddfe3",
+   "id": "870c0356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36efc47",
+   "id": "87fa3fed",
    "metadata": {},
    "source": [
     "***Data Engineering***"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a31265a",
+   "id": "35688d6e",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dadd6a83",
+   "id": "028ed75e",
    "metadata": {},
    "source": [
     "- Set changemyview to be the positive class."
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "abcbec50",
+   "id": "809ca24f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ef6742",
+   "id": "ca930f8c",
    "metadata": {},
    "source": [
     "- Scrub URLs and CMVs."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf0f61f6",
+   "id": "41bbb9e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e9a4f966",
+   "id": "e6df34ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95acd18f",
+   "id": "4597e460",
+   "metadata": {},
+   "source": [
+    "- Remove inserted moderator comments. Many change my view posts have \"_____ gt hello user of cmv this is a footnote...[etc.]\" or similar appended to the end of their selftext. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "754ffcd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrub_mod_comment(string):\n",
+    "    return string.split('_____ gt')[0].split('gt')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "074beedf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['selftext'] = df['selftext'].map(scrub_mod_comment)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dc8bf2b",
    "metadata": {},
    "source": [
     "- Lemmatize text fields."
@@ -158,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c87bd496",
+   "execution_count": 13,
+   "id": "6bd3a497",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "68e1f097",
+   "execution_count": 14,
+   "id": "b689cc75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "de31d6b8",
+   "execution_count": 15,
+   "id": "62997d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a0a15194",
+   "execution_count": 16,
+   "id": "07be6cba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86391c33",
+   "id": "fa1d84b4",
    "metadata": {},
    "source": [
     "- Add sentiment analysis columns."
@@ -209,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "384e7d5f",
+   "execution_count": 17,
+   "id": "65315ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "beab5480",
+   "execution_count": 18,
+   "id": "98ed924f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "ac9ed701",
+   "execution_count": 19,
+   "id": "53db0e85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0d47e496",
+   "execution_count": 20,
+   "id": "4b39a1ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f05a3bcb",
+   "id": "0d551d41",
    "metadata": {},
    "source": [
     "- Change column names so that there won't be a collision with vectorized columns."
@@ -263,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f94b2ae5",
+   "execution_count": 21,
+   "id": "caf459c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "120fa522",
+   "id": "9f38b786",
    "metadata": {},
    "source": [
     "- Add training column for fitting purposes."
@@ -281,18 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "19045d25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['training_set'] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "4c204c21",
+   "execution_count": 22,
+   "id": "79993bea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,31 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "dbba65b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Avanyali\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train['training_set'] = X_train['training_set'].map(lambda x: 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "2ee9f331",
+   "execution_count": 23,
+   "id": "52a59376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606d05e7",
+   "id": "92d6026b",
    "metadata": {},
    "source": [
     "- Identify best parameters for vectorizer. Code credit to lesson 'advanced hyperparameter search'"
@@ -348,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "04b33751",
+   "execution_count": 24,
+   "id": "ab925587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,15 +355,17 @@
     "])\n",
     "\n",
     "params = {\n",
-    "    'cvec__max_features': Integer(100, 3000),\n",
+    "    'cvec__max_features': Integer(100, 10000),\n",
     "    'cvec__min_df': Integer(1, 5),\n",
-    "    'cvec__max_df': Real(.5,1, prior='uniform')\n",
+    "    'cvec__max_df': Real(.5,1, prior='uniform'),\n",
+    "    'mnb__alpha': Real(.001, 100, prior='log-uniform')\n",
     "}\n",
     "\n",
     "cvec_bs = BayesSearchCV(estimator = pipe,\n",
     "                     search_spaces = params,\n",
-    "                     scoring = 'f1_weighted',\n",
+    "                     scoring = 'f1',\n",
     "                     n_iter = 50,\n",
+    "                     n_jobs = 8,\n",
     "                     cv = 5,\n",
     "                     refit = True,\n",
     "                     random_state=42)"
@@ -375,8 +373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a5bf85f6",
+   "execution_count": 25,
+   "id": "195784f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "bc49f54b",
+   "execution_count": 26,
+   "id": "e8e81c4b",
    "metadata": {},
    "outputs": [
     {
@@ -397,13 +395,14 @@
        "              estimator=Pipeline(steps=[('cvec',\n",
        "                                         CountVectorizer(stop_words='english')),\n",
        "                                        ('mnb', MultinomialNB())]),\n",
-       "              random_state=42, scoring='f1_weighted',\n",
+       "              n_jobs=8, random_state=42, scoring='f1',\n",
        "              search_spaces={'cvec__max_df': Real(low=0.5, high=1, prior='uniform', transform='identity'),\n",
-       "                             'cvec__max_features': Integer(low=100, high=3000, prior='uniform', transform='identity'),\n",
-       "                             'cvec__min_df': Integer(low=1, high=5, prior='uniform', transform='identity')})"
+       "                             'cvec__max_features': Integer(low=100, high=10000, prior='uniform', transform='identity'),\n",
+       "                             'cvec__min_df': Integer(low=1, high=5, prior='uniform', transform='identity'),\n",
+       "                             'mnb__alpha': Real(low=0.001, high=100, prior='log-uniform', transform='identity')})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,8 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "b592e9af",
+   "execution_count": 27,
+   "id": "6f7f236f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,19 +423,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "4e40a79e",
+   "execution_count": 28,
+   "id": "918f7deb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('cvec__max_df', 0.7933144337167336),\n",
-       "             ('cvec__max_features', 1537),\n",
-       "             ('cvec__min_df', 1)])"
+       "OrderedDict([('cvec__max_df', 0.8468466496240046),\n",
+       "             ('cvec__max_features', 1063),\n",
+       "             ('cvec__min_df', 1),\n",
+       "             ('mnb__alpha', 0.001)])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "3effbf8a",
+   "execution_count": 29,
+   "id": "7a49b3ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,20 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "9fae5996",
+   "execution_count": 30,
+   "id": "0f617dce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.7899794097460535,\n",
-       " 'sensitivity': 0.7242733699921445,\n",
-       " 'specificity': 0.8409506398537477,\n",
-       " 'f1': 0.750814332247557}"
+       "{'accuracy': 0.7848318462594372,\n",
+       " 'sensitivity': 0.7894736842105263,\n",
+       " 'specificity': 0.7812309567336989,\n",
+       " 'f1': 0.7622298065984073}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f1e543",
+   "id": "43356bd4",
    "metadata": {},
    "source": [
     "- Vectorize words and add to dataframe."
@@ -489,8 +489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "3d17dca7",
+   "execution_count": 31,
+   "id": "2f46df5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,8 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "30d74a3a",
+   "execution_count": 32,
+   "id": "146b116e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,8 +510,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5f070f4a",
+   "execution_count": 33,
+   "id": "6e52fd76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "28da43c0",
+   "execution_count": 34,
+   "id": "ffda0d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,8 +534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b75c0364",
+   "execution_count": 35,
+   "id": "6163d888",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "9a995bf8",
+   "execution_count": 36,
+   "id": "117fa0dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,8 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "c764ce9f",
+   "execution_count": 37,
+   "id": "0997b594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f323a44f",
+   "execution_count": 38,
+   "id": "d718c6e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62fc42f2",
+   "id": "fafba339",
    "metadata": {},
    "source": [
     "- Save engineered file."
@@ -583,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ef99fe76",
+   "execution_count": 39,
+   "id": "bdd8f612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548ed9f9",
+   "id": "f3e8f448",
    "metadata": {},
    "source": [
     "- On to part 4 ->"
